--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,65 @@
+# Application Info
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YOUR_APP_KEY_HERE   # Generated using `php artisan key:generate`
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
+# Logging
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Database Configuration
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=your_database_name     # Replace with your database name
+DB_USERNAME=your_database_user     # Replace with your database username
+DB_PASSWORD=your_database_password # Replace with your database password
 
-BROADCAST_DRIVER=log
+# Queue Configuration
+QUEUE_CONNECTION=database
+QUEUE_SECRET=your_secure_queue_secret # Replace with a secure secret key
+
+# Session and Cache
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+FILESYSTEM_DISK=local
 
-MEMCACHED_HOST=127.0.0.1
-
+# Redis (Optional)
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Mail Configuration (Mailtrap Example)
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=your_mailtrap_username   # Replace with your Mailtrap username
+MAIL_PASSWORD=your_mailtrap_password   # Replace with your Mailtrap password
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=hello@example.com
+MAIL_FROM_NAME="RoomPro"
 
+# AWS S3 (Optional, not configured)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Pusher (Optional, not configured)
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_CLUSTER=
 
+# Vite (for broadcasting with Pusher, optional)
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
